--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -6,36 +6,10 @@ on:
       - "main"
 
 jobs:
-  # build-with-doc:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     -
-  #       name: Checkout
-  #       uses: actions/checkout@v3
-  #     -
-  #       name: Set up QEMU
-  #       uses: docker/setup-qemu-action@v2
-  #     -
-  #       name: Set up Docker Buildx
-  #       uses: docker/setup-buildx-action@v2
-  #     -
-  #       name: Login to DockerHub
-  #       uses: docker/login-action@v2
-  #       with:
-  #         username: ${{ secrets.DOCKERHUB_USERNAME }}
-  #         password: ${{ secrets.DOCKERHUB_TOKEN }}
-  #     -
-  #       name: Build and push
-  #       uses: docker/build-push-action@v4
-  #       with:
-  #         context: .
-  #         build-args: 
-  #           DOCFILES=yes
-  #           SRCFILES=no
-  #         platforms: linux/amd64,linux/arm64
-  #         push: true
-  #         tags: jiuyoung/texlive:latest-doc
-  build-without-doc:
+  build-x64:
+    strategy:
+      matrix: 
+        docfiles: [no, yes]
     runs-on: ubuntu-latest
     steps:
       -
@@ -53,14 +27,52 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - 
+        name: Generate Tag Suffix
+        run: echo TAG_SUFFIX=latest`if [[ "${{ matrix.docfiles }}" = "yes" ]]; then echo "-doc"; fi` >> $GITHUB_ENV
       -
         name: Build and push
         uses: docker/build-push-action@v4
         with:
           context: .
           build-args: 
-            DOCFILES=no
+            DOCFILES=${{ matrix.docfiles }}
             SRCFILES=no
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           push: true
-          tags: jiuyoung/texlive:latest
+          tags: jiuyoung/texlive:${{ env.TAG_SUFFIX }}
+  build-ARM:
+    strategy:
+      matrix: 
+        docfiles: [no, yes]
+    runs-on: ubuntu-latest
+    steps:
+      -
+        name: Checkout
+        uses: actions/checkout@v3
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      -
+        name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - 
+        name: Generate Tag Suffix
+        run: echo TAG_SUFFIX=latest`if [[ "${{ matrix.docfiles }}" = "yes" ]]; then echo "-doc"; fi` >> $GITHUB_ENV
+      -
+        name: Build and push
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          build-args: 
+            DOCFILES=${{ matrix.docfiles }}
+            SRCFILES=no
+          platforms: linux/arm64
+          push: true
+          tags: jiuyoung/texlive:${{ env.TAG_SUFFIX }}
