--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -6,7 +6,36 @@ on:
       - "main"
 
 jobs:
+  build-base:
+    runs-on: ubuntu-latest
+    steps:
+      -
+        name: Checkout
+        uses: actions/checkout@v3
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      -
+        name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      -
+        name: Build and push
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: Dockerfile.base
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: jiuyoung/texlive:base
+
   build-x64:
+    needs: build-base
     strategy:
       matrix: 
         docfiles: [no, yes]
@@ -42,6 +71,7 @@ jobs:
           push: true
           tags: jiuyoung/texlive:${{ env.TAG_SUFFIX }}
   build-ARM:
+    needs: build-base
     strategy:
       matrix: 
         docfiles: [no, yes]
