--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -5,8 +5,12 @@ on:
     branches:
       - "main"
 
+env:
+  SKIP_BASE: false
+
 jobs:
   build-base:
+    if: env.SKIP_BASE != true
     runs-on: ubuntu-latest
     steps:
       -
@@ -39,6 +43,7 @@ jobs:
     strategy:
       matrix: 
         docfiles: [no, yes]
+        arch: [linux/amd64, linux/arm64]
     runs-on: ubuntu-latest
     steps:
       -
@@ -67,42 +72,6 @@ jobs:
           build-args: 
             DOCFILES=${{ matrix.docfiles }}
             SRCFILES=no
-          platforms: linux/amd64
-          push: true
-          tags: jiuyoung/texlive:${{ env.TAG_SUFFIX }}
-  build-ARM:
-    needs: build-base
-    strategy:
-      matrix: 
-        docfiles: [no, yes]
-    runs-on: ubuntu-latest
-    steps:
-      -
-        name: Checkout
-        uses: actions/checkout@v3
-      -
-        name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      -
-        name: Login to DockerHub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - 
-        name: Generate Tag Suffix
-        run: echo TAG_SUFFIX=latest`if [[ "${{ matrix.docfiles }}" = "yes" ]]; then echo "-doc"; fi` >> $GITHUB_ENV
-      -
-        name: Build and push
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          build-args: 
-            DOCFILES=${{ matrix.docfiles }}
-            SRCFILES=no
-          platforms: linux/arm64
+          platforms: ${{ matrix.arch }}
           push: true
           tags: jiuyoung/texlive:${{ env.TAG_SUFFIX }}
