--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -10,7 +10,7 @@ env:
 
 jobs:
   build-base:
-    if: env.SKIP_BASE != true
+    if: ${{ env.SKIP_BASE != true }}
     runs-on: ubuntu-latest
     steps:
       -
