--- a/Dockerfile.debian
+++ b/Dockerfile.debian
@@ -1,4 +1,4 @@
-FROM ubuntu:22.10
+FROM debian:bookworm
 
 ENV LANG=C.UTF-8 \
     LC_ALL=C.UTF-8 \
@@ -9,7 +9,7 @@ ENV LANG=C.UTF-8 \
     # install perl docs…
     NOPERLDOC=1
 
-# RUN sed -i 's/ports.ubuntu.com/mirrors.ustc.edu.cn/g' /etc/apt/sources.list
+RUN sed -i 's/deb.debian.org/mirrors.ustc.edu.cn/g' /etc/apt/sources.list
 
 # 直接安装
 RUN apt-get update -q && \
